--- a/index-git.html
+++ b/index-git.html
@@ -2,14 +2,15 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Cursos de Alura </title>
+     <title> Cursos de DevOps de Alura </title>
 </head>
 <body>
      <ul>
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integracion continua: Madurez y Productividad en el Desarrollo de software</li>
+         <li> Integracion continua </li>
+         <li>Nuevo Curso</li>
      </ul>
 </body>
 </html>
