corrigiendo el nombre del curso Vagrant

--- a/index-git.html
+++ b/index-git.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant: Gerenciando maquians vistuales</li>
+         <li> Vagrant: Gerenciando maquinas visuales</li>
          <li> Docker: Creando containers sin dolor de cabeza</li>
          <li> Ansible: Su Infraestructura como código </li>
          <li> Integracion continua: Madurez y Productividad en el Desarrollo de software</li>
